card-details avatar scrollbar correction

--- a/css/board/board-card-details-and-edit.css
+++ b/css/board/board-card-details-and-edit.css
@@ -319,5 +319,5 @@
 
 .selected-avatars-overlay {
   height: 180px;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
